css/style.css
/* Quill Rich Text Editor */
.ql-snow .ql-picker.ql-header .ql-picker-label[data-value='1']::before,
.ql-snow .ql-picker.ql-header .ql-picker-item[data-value='1']::before {
  content: 'Heading';
}
.ql-snow .ql-picker.ql-header .ql-picker-label[data-value='2']::before,
.ql-snow .ql-picker.ql-header .ql-picker-item[data-value='2']::before {
  content: 'Subheading';
}
.ql-font-lato {
  font-family: 'Lato', sans-serif;
}
.ql-snow .ql-picker.ql-font .ql-picker-label[data-value='lato']::before,
.ql-snow .ql-picker.ql-font .ql-picker-item[data-value='lato']::before {
  content: 'Lato';
}
.ql-font-alexandria {
  font-family: 'Alexandria', sans-serif;
}
.ql-snow .ql-picker.ql-font .ql-picker-label[data-value='alexandria']::before,
.ql-snow .ql-picker.ql-font .ql-picker-item[data-value='alexandria']::before {
  content: 'Alexandria';
}
.ql-snow .ql-picker.ql-weight {
  width: 60px;
}
.ql-weight-100 {
  font-weight: 100;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='100']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='100']::before {
  content: '100';
}
.ql-weight-200 {
  font-weight: 200;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='200']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='200']::before {
  content: '200';
}
.ql-weight-300 {
  font-weight: 300;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='300']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='300']::before {
  content: '300';
}
.ql-weight-400 {
  font-weight: 400;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='400']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='400']::before {
  content: '400';
}
.ql-weight-500 {
  font-weight: 500;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='500']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='500']::before {
  content: '500';
}
.ql-weight-600 {
  font-weight: 600;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='600']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='600']::before {
  content: '600';
}
.ql-weight-700 {
  font-weight: 700;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='700']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='700']::before {
  content: '700';
}
.ql-weight-800 {
  font-weight: 800;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='800']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='800']::before {
  content: '800';
}
.ql-weight-900 {
  font-weight: 900;
}
.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='900']::before,
.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='900']::before {
  content: '900';
}
.ql-editor {
  min-height: 160px;
  padding: 40px;
}

/* Certificate Settings */
#customThemeSettings[data-theme] > * {
  display: none;
}
#customThemeSettings[data-theme='borderWithSideImage'] #withSideImage,
#customThemeSettings[data-theme='withSideImage'] #withSideImage,
#customThemeSettings[data-theme='withBackgroundImage'] #withBackgroundImage,
#customThemeSettings[data-theme*='border'] #withBorderColor,
#customThemeSettings:not([data-theme='withBackgroundImage'])
  #withBackgroundColor {
  display: block;
}

/* Certificate content */
.certificate-preview {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 32px;
  background-color: #f6f6f6;
  border: solid #dbdbdb;
  border-width: 1px;
  border-radius: 20px;
  overflow: hidden;
}
#canvasPreview {
  width: 100%;
}
#certificate {
  --damnation-x: 1180px;
  --damnation-y: 910px;
  --padding-x: 200px;
  --padding-y: 100px;

  /* Hide container until certificate is generated */
  display: none;

  /* Ensure scaling center */
  transform-origin: center;

  width: var(--damnation-x, 1150px);
  height: var(--damnation-y, 910px);

  padding-inline: var(--padding-x, 200px);
  padding-block: var(--padding-y, 100px);

  /* Fix flex view or preview container */
  flex-shrink: 0;

  /* Make sure it is like Quilljs editor */
  font-family: Helvetica, Arial, sans-serif;
  font-size: 13px;

  background-color: var(--background-color, #ffffff);
}
#certificate[data-orientation='portrait'] {
  --damnation-x: 910px;
  --damnation-y: 1180px;
  --padding-x: 100px;
  --padding-y: 200px;

  width: var(--damnation-x, 910px);
  height: var(--damnation-y, 1180px);

  padding-inline: var(--padding-x, 100px);
  padding-block: var(--padding-y, 200px);
}
#certificate > .content > .data-form {
  flex: 1 1 auto;
  margin: auto;
  padding: 0px;

  /* Required for Quilljs editor */
  height: unset;
}
#certificate > .content > .side {
  display: none;
}
#certificate > .content {
  width: 100%;
  height: 100%;

  display: flex;
}

/* Certificate styles */
/* With background */
#certificate[data-theme='withBackgroundImage'] {
  /* --background-image: url(../img/background/landscape/ex-1.png); */
  background-image: var(--background-image);
  background-size: cover;
}
#certificate[data-theme='withBackgroundImage'][data-orientation='portrait'] {
  /* --background-image: url(../img/background/portrait/ex-1.png); */
}

/* With border */
#certificate[data-theme*='border'] {
  position: relative;

  --padding-x: 50px;
  --padding-y: 50px;
}
#certificate[data-theme*='border']:before {
  content: '';
  position: absolute;
  top: 20px;
  left: 20px;
  width: calc(100% - 40px);
  height: calc(100% - 40px);
  border: 3px solid var(--border-accent-color, #b1b1b1be);
}
#certificate[data-theme*='border']:after {
  content: '';
  position: absolute;
  top: 28px;
  left: 28px;
  width: calc(100% - 56px);
  height: calc(100% - 56px);
  border: 15px solid var(--border-color, #b1b1b1be);
}
#certificate[data-theme*='border'] > .content {
  position: relative;
  z-index: 1;

  border: 6px solid var(--border-accent-color, #b1b1b1be);
}
#certificate[data-theme*='border'] > .content > .data-form {
  padding: 40px;
}
#certificate[data-theme*='borderWithSideImage'] > .content > .data-form {
  padding-inline: 0;
}

/* With side image */
#certificate[data-theme*='ithSideImage']:not([data-theme*='border']) {
  --padding-x: 40px;
  --padding-y: 40px;
}
#certificate[data-theme*='ithSideImage'] > .content > .side {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1 0 100%;
  max-width: 35%;

  /* Image position */
  order: var(--side-position, 0);
}
#certificate[data-theme*='ithSideImage']:not([data-theme*='border'])
  > .content
  > .side {
  margin-block: -40px;
}
#certificate[data-theme*='ithSideImage'] > .content > .side img {
  height: 100%;
  object-fit: cover;
}

